udev: ensure /dev mgmt option is in sync
These options should be in sync, both for consistency and because udev
needs devtmpfs enabled in the kernel.

We unfortunately cannot just select BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV
here, as that one selects udev - leading to recursion erors, so instead
we use depends on.

Signed-off-by: Peter Korsgaard <jacmet@sunsite.dk>
(cherry picked from commit 1add7c592bff56c5115997ab9b42e0fd9a5947ca)

--- a/package/udev/Config.in
+++ b/package/udev/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_UDEV
 	bool "udev"
+	depends on BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV
 	help
 	  Userspace device daemon.
 
@@ -26,3 +27,6 @@ comment "udev extras requires a toolchain with LARGEFILE/WCHAR/PROGRAM_INVOCATIO
 	depends on !(BR2_LARGEFILE && BR2_USE_WCHAR && BR2_PROGRAM_INVOCATION)
 
 endif
+
+comment "udev requires /dev mgmnt set to udev under System configuration"
+	depends on !BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV
