[pivos] turn off OSD2

--- a/board/amlogic/atv300/kernel.config
+++ b/board/amlogic/atv300/kernel.config
@@ -634,7 +634,7 @@ CONFIG_AM_TV_OUTPUT=y
 # Amlogic osd module
 #
 CONFIG_FB_AM=y
-CONFIG_FB_OSD2_ENABLE=y
+# CONFIG_FB_OSD2_ENABLE is not set
 CONFIG_AM_GE2D=y
 # CONFIG_AM_LOGO is not set
 
