[pivos] update amplayer to amlogic openlinux-20111019 branch at 03a508ffd8f1ef606eb1c19a955634f0d7816d8f

--- a/package/amlogic/libplayer/src/amplayer/player/Makefile
+++ b/package/amlogic/libplayer/src/amplayer/player/Makefile
@@ -19,6 +19,11 @@
 	player_ffmpeg_ctrl.o \
 	player_set_sys.o \
 	h263vld.o \
+	player_cache_file.o \
+	player_cache_mgt.o \
 	player_itemlist.o \
-	player_sub.o
+	player_sub.o \
+	player_thumbnail.o \
+	player_mate.o \
+	version.o \
 
