[pivos] update amaudio, amports, audiodsp, audiodsplog, canvas, display, hdmi, i2c, jpeglogo, irremote and uart. sound moved to sound/soc/aml. This commit REQUIRES rebuilding kernel, amadec, amcodec, libamplayer and amremote or you will die a horrible death

--- a/board/amlogic/atv300/kernel.config
+++ b/board/amlogic/atv300/kernel.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.34
-# Fri Oct 21 22:54:38 2011
+# Wed Nov 30 15:18:34 2011
 #
 CONFIG_ARM=y
 CONFIG_HOLES_IN_ZONE=y
@@ -533,13 +533,19 @@ CONFIG_EXTRA_FIRMWARE=""
 #
 # CONFIG_AM_UART_WITH_S_CORE is not set
 CONFIG_AM_UART_WITHOUT_S_CORE=y
-# CONFIG_AM_UART0_SET_PORT_A is not set
+CONFIG_AM_UART0_SET_PORT_A=y
 # CONFIG_AM_UART0_SET_PORT_B is not set
+
+#
+# ---SET ttyS1 support
+#
+CONFIG_UART_USE_FIQ=y
 
 #
 # Amlogic RTC support
 #
 CONFIG_AML_RTC=y
+CONFIG_AMLOGIC_I2C=y
 # CONFIG_I2C_APOLLO is not set
 CONFIG_I2C_AML=y
 # CONFIG_I2C_SW_AML is not set
@@ -631,10 +637,20 @@ CONFIG_AM_TV_OUTPUT=y
 # CONFIG_AM_TCON_OUTPUT is not set
 
 #
+# Amlogic Backlight Support
+#
+# CONFIG_AMLOGIC_BACKLIGHT is not set
+
+#
 # Amlogic osd module
 #
 CONFIG_FB_AM=y
 # CONFIG_FB_OSD2_ENABLE is not set
+CONFIG_FB_OSD1_DEFAULT_BITS_PER_PIXEL=32
+CONFIG_FB_OSD1_DEFAULT_WIDTH=1280
+CONFIG_FB_OSD1_DEFAULT_HEIGHT=720
+CONFIG_FB_OSD1_DEFAULT_WIDTH_VIRTUAL=1280
+CONFIG_FB_OSD1_DEFAULT_HEIGHT_VIRTUAL=1440
 CONFIG_AM_GE2D=y
 # CONFIG_AM_LOGO is not set
 
@@ -648,7 +664,6 @@ CONFIG_AM_PTSSERVER=y
 CONFIG_AM_VDEC_MPEG12=y
 CONFIG_AM_VDEC_MPEG4=y
 CONFIG_AM_VDEC_VC1=y
-CONFIG_AM_VDEC_AVS=y
 CONFIG_AM_VDEC_H264=y
 CONFIG_AM_VDEC_MJPEG=y
 CONFIG_AM_VDEC_REAL=y
@@ -678,9 +693,9 @@ CONFIG_AML_HDMI_TX=y
 # CONFIG_TVIN_TUNER_FQ1216ME is not set
 
 #
-# Amlogic ALSA Audio devices
+# Amlogic Audio Interface
 #
-# CONFIG_SND_AML is not set
+CONFIG_AMAUDIO=y
 
 #
 # Amlogic audio dsp process 
@@ -701,6 +716,11 @@ CONFIG_CMEM=m
 # Mali 400 GPU OpenGL device driver
 #
 CONFIG_MALI=m
+
+#
+# Amlogic audio dsp log
+#
+# CONFIG_AML_AUDIO_DSP_LOG is not set
 
 #
 # AMLOGIC DVB driver
@@ -1483,6 +1503,9 @@ CONFIG_SND_SOC=y
 CONFIG_SND_AML_SOC=y
 CONFIG_SND_AML_M1=y
 # CONFIG_SND_AML_M1_MID_WM8900 is not set
+# CONFIG_SND_AML_M1_ARMDEV_WM8900 is not set
+# CONFIG_SND_AML_M1_MID_RT5621 is not set
+# CONFIG_SND_AML_M1_MID_CS42L52 is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 # CONFIG_SOUND_PRIME is not set
