--- a/package/amlogic/libplayer/src/amadec/Makefile
+++ b/package/amlogic/libplayer/src/amadec/Makefile
@@ -13,7 +13,7 @@ TARGET_DIR=$(shell pwd)/../../../target
 STAGING_DIR=$(shell pwd)/../../../staging
 CFLAGS+=-O2
 CFLAGS+=-I$(shell pwd) -I$(shell pwd)/include -I${STAGING_DIR}/include -I${STAGING_DIR}/usr/include -L${TARGET_DIR}/lib -L${TARGET_DIR}/usr/lib
-CFLAGS+=-DALSA_OUT
+CFLAGS+=-DALSA_OUT -DENABLE_WAIT_FORMAT
 
 
 
