--- a/configs/amlogic_atv300-xbmc_defconfig
+++ b/configs/amlogic_atv300-xbmc_defconfig
@@ -10,6 +10,7 @@ BR2_TARGET_GENERIC_GETTY=y
 BR2_BUSYBOX_VERSION_1_16_X=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/atv300/busybox.config"
 BR2_PACKAGE_XBMC=y
+BR2_PACKAGE_SAMBA_WINBINDD=n
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/atv300/skeleton"
 BR2_LINUX_KERNEL=y
