--- a/configs/amlogic_atv300-xbmc_defconfig
+++ b/configs/amlogic_atv300-xbmc_defconfig
@@ -9,6 +9,7 @@ BR2_TARGET_OPTIMIZATION="-pipe -mfloat-abi=softfp -mfpu=neon"
 BR2_TARGET_GENERIC_GETTY=y
 BR2_BUSYBOX_VERSION_1_16_X=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/atv300/busybox.config"
+BR2_PACKAGE_UBOOTAML=y
 BR2_PACKAGE_XBMC=y
 # BR2_PACKAGE_SAMBA_WINBINDD is not set
 BR2_ROOTFS_SKELETON_CUSTOM=y
