--- a/package/Config.in
+++ b/package/Config.in
@@ -6,6 +6,9 @@ source "package/customize/Config.in"
 # AMLogic libs and programs
 source "package/amlogic/Config.in"
 
+#Non-buildroot libs and programs
+source "package/thirdparty/Config.in"
+
 # Audio and video applications
 source "package/multimedia/Config.in"
 
