[aml] add a real xbmc package.
Deps still need cleaning/testing, but I've verified that XBMC can build
with only the packages provided.

--- a/package/amlogic/xbmc/Config.in
+++ b/package/amlogic/xbmc/Config.in
@@ -1,18 +1,11 @@
 config BR2_PACKAGE_XBMC
 	bool "xbmc (deps only)"
-        select BR2_PACKAGE_AMREMOTE_CONFIG
+	select BR2_PACKAGE_AMREMOTE_CONFIG
 	select BR2_PACKAGE_KPLAYER
-	select BR2_PACKAGE_OPENGL
-	select BR2_PACKAGE_LZO
-	select BR2_PACKAGE_NCURSES
-        select BR2_PACKAGE_NCURSES_TARGET_PANEL
-        select BR2_PACKAGE_NCURSES_TARGET_FORM
-        select BR2_PACKAGE_NCURSES_TARGET_MENU
 	select BR2_PACKAGE_ALSA_UTILS
 	select BR2_PACKAGE_ALSA_UTILS_ALSAMIXER
 	select BR2_PACKAGE_FLAC
-	select BR2_PACKAGE_LIBCDAUDIO
-	select BR2_PACKAGE_LIBCUEFILE
+	select BR2_PACKAGE_LIBASS
 	select BR2_PACKAGE_LIBMAD
 	select BR2_PACKAGE_LIBMPEG2
 	select BR2_PACKAGE_LIBOGG
@@ -21,11 +14,11 @@ config BR2_PACKAGE_XBMC
 	select BR2_PACKAGE_LIBVORBIS
 	select BR2_PACKAGE_WAVPACK
 	select BR2_PACKAGE_BZIP2
+	select BR2_PACKAGE_DBUS
+	select BR2_PACKAGE_LIBCDIO
 	select BR2_PACKAGE_PYTHON
-	select BR2_PACKAGE_PYTHON_PYC_ONLY
 	select BR2_PACKAGE_PYTHON_BZIP2
 	select BR2_PACKAGE_PYTHON_BSDDB
-	select BR2_PACKAGE_PYTHON_CODECSCJK
 	select BR2_PACKAGE_PYTHON_CURSES
 	select BR2_PACKAGE_PYTHON_PYEXPAT
 	select BR2_PACKAGE_PYTHON_READLINE
@@ -36,24 +29,43 @@ config BR2_PACKAGE_XBMC
 	select BR2_PACKAGE_LZO
 	select BR2_PACKAGE_ZLIB
 	select BR2_PACKAGE_LIBGCRYPT
-	select BR2_PACKAGE_LIBGPG_ERROR
 	select BR2_PACKAGE_OPENSSL
 	select BR2_PACKAGE_MYSQL_CLIENT
 	select BR2_PACKAGE_SQLITE
 	select BR2_PACKAGE_FONTCONFIG
 	select BR2_PACKAGE_FREETYPE
+	select BR2_PACKAGE_JASPER
+	select BR2_PACKAGE_JPEG
+	select BR2_PACKAGE_LIBMODPLUG
 	select BR2_PACKAGE_LIBPNG
 	select BR2_PACKAGE_LIBUNGIF
-	select BR2_PACKAGE_LIBUSB
-	select BR2_PACKAGE_LIBUSB_COMPAT
+	select BR2_PACKAGE_TIFF
 	select BR2_PACKAGE_LIBCURL
 	select BR2_PACKAGE_LIBMICROHTTPD
+	select BR2_PACKAGE_LIBSSH2
+	select BR2_PACKAGE_BOOST
+	select BR2_PACKAGE_BOOST_THREAD
+	select BR2_PACKAGE_FRIBIDI
+	select BR2_PACKAGE_NCURSES
+	select BR2_PACKAGE_NCURSES_TARGET_PANEL
+	select BR2_PACKAGE_NCURSES_TARGET_FORM
+	select BR2_PACKAGE_NCURSES_TARGET_MENU
 	select BR2_PACKAGE_PCRE
 	select BR2_PACKAGE_READLINE
 	select BR2_PACKAGE_EXPAT
 	select BR2_PACKAGE_LIBXML2
-	select BR2_PACKAGE_SAMBA
+	select BR2_PACKAGE_YAJL
 	select BR2_PACKAGE_SAMBA_LIBSMBCLIENT
-	help
-		XBMC
+	select BR2_PACKAGE_LIBNFS
+	select BR2_PACKAGE_LIBRTMP
+	select BR2_PACKAGE_NCURSES_TARGET_PANEL
+	select BR2_PACKAGE_NCURSES_TARGET_FORM
+	select BR2_PACKAGE_NCURSES_TARGET_MENU
+	select BR2_PACKAGE_AMREMOTE_CONFIG
+	select BR2_PACKAGE_KPLAYER
 
+	bool "xbmc"
+	help
+	xbmc
+
+		http://xbmc.org
