--- a/package/qt/Config.in
+++ b/package/qt/Config.in
@@ -23,12 +23,12 @@ config BR2_PACKAGE_QT_DEMOS
 
 choice
 	prompt "Library type"
-	default BR2_PACKAGE_QT_SHARED
 	help
 	  Selects the library type: Shared or Static
 
 config BR2_PACKAGE_QT_SHARED
 	bool "Shared library"
+	depends on !BR2_PREFER_STATIC_LIB
 	help
 	  Create and use shared Qt libraries.
 	  If you have multiple programs that depend on Qt or intend to use
@@ -54,6 +54,19 @@ config BR2_PACKAGE_QT_LICENSE_APPROVED
 
 	  LGPL v2.1: http://doc.trolltech.com/4.5/lgpl.html
 	  GPL  v3.0: http://doc.trolltech.com/4.5/gpl.html
+
+config BR2_PACKAGE_QT_CONFIG_FILE
+	string "Config file"
+	help
+	  Configure options allow to set which modules are being
+	  compiled or not in Qt, but Qt also provide a more
+	  fine-grained mechanism to configure which features should be
+	  enabled or disabled, through a header file. Examples of such
+	  header files can be found in src/corelib/global/qconfig-*.h
+	  in the Qt sources.
+
+	  This option allows to set the path of such a configuration
+	  file, which Buildroot will give to Qt at compile time.
 
 config BR2_PACKAGE_QT_QT3SUPPORT
 	bool "Compatibility with Qt3"
@@ -240,26 +253,6 @@ config BR2_PACKAGE_QT_SYSTEMZLIB
 	  Use the shared zlib from the system.
 endchoice
 
-config BR2_PACKAGE_QT_EMB_PLATFORM
-	string "The embedded platform we are making Qt for"
-	default "arm"	if BR2_arm
-	default "arm"	if BR2_armeb
-	default "avr32"	if BR2_avr32
-	default "x86"	if BR2_i386
-	default "x86_64"	if BR2_x86_64
-	default "mips"	if BR2_mips
-	default "mips"	if BR2_mipsel
-	default "powerpc"	if BR2_powerpc
-# Not that I really believe these will work..
-	default "generic"	if BR2_alpha
-	default "generic"	if BR2_chris
-	default "generic"	if BR2_m68k
-	default "generic"	if BR2_sh
-	default "generic"	if BR2_sh64
-	default "generic"	if BR2_sparc
-	help
-	  The target platform.
-
 source "package/qt/Config.sql.in"
 if BR2_PACKAGE_QT_GUI_MODULE
 source "package/qt/Config.gfx.in"
@@ -285,16 +278,13 @@ config BR2_PACKAGE_QT_PHONON_BACKEND
 	help
 	  Build the platform Phonon plugin.
 	  If unsure, say n.
-
-comment "Qt DBbus module not available (need dbus)"
-	depends on !BR2_PACKAGE_DBUS
+endif
 
 config BR2_PACKAGE_QT_DBUS
 	bool "DBus Module"
-	depends on BR2_PACKAGE_DBUS
+	select BR2_PACKAGE_DBUS
 	help
 	  Build the Qt DBus module.
-endif
 
 config BR2_PACKAGE_QT_XML
 	bool "XML Module"
@@ -380,8 +370,17 @@ config BR2_PACKAGE_QT_SCRIPT
 config BR2_PACKAGE_QT_SCRIPTTOOLS
 	bool "Script Tools Module"
 	depends on BR2_PACKAGE_QT_SCRIPT
+	depends on BR2_PACKAGE_QT_GUI_MODULE
 	help
 	  Build the Qt Script Tools module.
+	  if unsure, say n.
+
+config BR2_PACKAGE_QT_DECLARATIVE
+	bool "Declarative module"
+	depends on BR2_PACKAGE_QT_SCRIPT
+	depends on BR2_PACKAGE_QT_GUI_MODULE
+	help
+	  Build the Qt Declarative Module for qml support
 	  if unsure, say n.
 
 endif # BR2_PACKAGE_QT
