--- a/configs/amlogic_atv300-xbmc_defconfig
+++ b/configs/amlogic_atv300-xbmc_defconfig
@@ -11,7 +11,31 @@ BR2_BUSYBOX_VERSION_1_16_X=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/atv300/busybox.config"
 BR2_PACKAGE_UBOOTAML=y
 BR2_PACKAGE_XBMC=y
-# BR2_PACKAGE_SAMBA_WINBINDD is not set
+# BR2_PACKAGE_SAMBA30_CIFS is not set
+# BR2_PACKAGE_SAMBA30_EVENTLOGADM is not set
+# BR2_PACKAGE_SAMBA30_NET is not set
+# BR2_PACKAGE_SAMBA30_NMBD is not set
+# BR2_PACKAGE_SAMBA30_NMBLOOKUP is not set
+# BR2_PACKAGE_SAMBA30_NTLM_AUTH is not set
+# BR2_PACKAGE_SAMBA30_PDBEDIT is not set
+# BR2_PACKAGE_SAMBA30_PROFILES is not set
+# BR2_PACKAGE_SAMBA30_RPCCLIENT is not set
+# BR2_PACKAGE_SAMBA30_SMBCACLS is not set
+# BR2_PACKAGE_SAMBA30_SMBCLIENT is not set
+# BR2_PACKAGE_SAMBA30_SMBCONTROL is not set
+# BR2_PACKAGE_SAMBA30_SMBCQUOTAS is not set
+# BR2_PACKAGE_SAMBA30_SMBGET is not set
+# BR2_PACKAGE_SAMBA30_SMBLDBTOOLS is not set
+# BR2_PACKAGE_SAMBA30_SMBPASSWD is not set
+# BR2_PACKAGE_SAMBA30_SMBSHARESEC is not set
+# BR2_PACKAGE_SAMBA30_SMBSPOOL is not set
+# BR2_PACKAGE_SAMBA30_SMBSTATUS is not set
+# BR2_PACKAGE_SAMBA30_SMBTREE is not set
+# BR2_PACKAGE_SAMBA30_SWAT is not set
+# BR2_PACKAGE_SAMBA30_TDB is not set
+# BR2_PACKAGE_SAMBA30_TESTPARM is not set
+# BR2_PACKAGE_SAMBA30_WINBINDD is not set
+BR2_PACKAGE_SAMBA30_LIBSMBCLIENT=y
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/atv300/skeleton"
 BR2_LINUX_KERNEL=y
