--- a/configs/amlogic_atv300-xbmc-qt-webkit_defconfig
+++ b/configs/amlogic_atv300-xbmc-qt-webkit_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2011.02-g7d18057-dirty Configuration
-# Tue Feb  7 13:25:41 2012
+# Buildroot 2011.02-g5df38ee-dirty Configuration
+# Fri Feb 10 15:43:33 2012
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -207,6 +207,58 @@ BR2_PACKAGE_LIBMODPLUG=y
 BR2_PACKAGE_LIBNFS=y
 BR2_PACKAGE_LIBRTMP=y
 BR2_PACKAGE_LIBSSH2=y
+BR2_PACKAGE_SAMBA30=y
+
+#
+# Samba tools selection
+#
+BR2_PACKAGE_SAMBA30_CIFS=y
+BR2_PACKAGE_SAMBA30_EVENTLOGADM=y
+
+#
+# findsmb       - disabled (requires nmblookup, smbclient and perl)
+#
+BR2_PACKAGE_SAMBA30_NET=y
+BR2_PACKAGE_SAMBA30_NMBD=y
+BR2_PACKAGE_SAMBA30_NMBLOOKUP=y
+BR2_PACKAGE_SAMBA30_NTLM_AUTH=y
+BR2_PACKAGE_SAMBA30_PDBEDIT=y
+BR2_PACKAGE_SAMBA30_PROFILES=y
+BR2_PACKAGE_SAMBA30_RPCCLIENT=y
+BR2_PACKAGE_SAMBA30_SMBCACLS=y
+BR2_PACKAGE_SAMBA30_SMBCLIENT=y
+BR2_PACKAGE_SAMBA30_SMBCONTROL=y
+BR2_PACKAGE_SAMBA30_SMBCQUOTAS=y
+BR2_PACKAGE_SAMBA30_SMBGET=y
+BR2_PACKAGE_SAMBA30_SMBLDBTOOLS=y
+BR2_PACKAGE_SAMBA30_SMBPASSWD=y
+BR2_PACKAGE_SAMBA30_SMBSHARESEC=y
+BR2_PACKAGE_SAMBA30_SMBSPOOL=y
+BR2_PACKAGE_SAMBA30_SMBSTATUS=y
+BR2_PACKAGE_SAMBA30_SMBTREE=y
+BR2_PACKAGE_SAMBA30_SWAT=y
+BR2_PACKAGE_SAMBA30_SMBTAR=y
+BR2_PACKAGE_SAMBA30_TDB=y
+BR2_PACKAGE_SAMBA30_TESTPARM=y
+BR2_PACKAGE_SAMBA30_WINBINDD=y
+BR2_PACKAGE_SAMBA30_WBINFO=y
+
+#
+# Samba libraries selection
+#
+BR2_PACKAGE_SAMBA30_LIBSMBCLIENT=y
+
+#
+# Samba support selection
+#
+
+#
+# support avahi - disabled (requires avahi-daemon/dbus)
+#
+
+#
+# support gamin - disabled (requires gamin)
+#
 BR2_PACKAGE_YAJL=y
 BR2_PACKAGE_XBMC=y
 
@@ -716,7 +768,8 @@ BR2_PACKAGE_LIBXML2=y
 # BR2_PACKAGE_CTORRENT is not set
 # BR2_PACKAGE_CUPS is not set
 # BR2_PACKAGE_DNSMASQ is not set
-# BR2_PACKAGE_DROPBEAR is not set
+BR2_PACKAGE_DROPBEAR=y
+# BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS is not set
 # BR2_PACKAGE_ETHTOOL is not set
 # BR2_PACKAGE_HOSTAPD is not set
 # BR2_PACKAGE_IFPLUGD is not set
@@ -752,57 +805,7 @@ BR2_PACKAGE_LIBXML2=y
 # BR2_PACKAGE_QUAGGA is not set
 # BR2_PACKAGE_RSH_REDONE is not set
 # BR2_PACKAGE_RSYNC is not set
-BR2_PACKAGE_SAMBA=y
-
-#
-# Samba tools selection
-#
-BR2_PACKAGE_SAMBA_CIFS=y
-BR2_PACKAGE_SAMBA_EVENTLOGADM=y
-
-#
-# findsmb       - disabled (requires nmblookup, smbclient and perl)
-#
-BR2_PACKAGE_SAMBA_NET=y
-BR2_PACKAGE_SAMBA_NMBD=y
-BR2_PACKAGE_SAMBA_NMBLOOKUP=y
-BR2_PACKAGE_SAMBA_NTLM_AUTH=y
-BR2_PACKAGE_SAMBA_PDBEDIT=y
-BR2_PACKAGE_SAMBA_PROFILES=y
-BR2_PACKAGE_SAMBA_RPCCLIENT=y
-BR2_PACKAGE_SAMBA_SMBCACLS=y
-BR2_PACKAGE_SAMBA_SMBCLIENT=y
-BR2_PACKAGE_SAMBA_SMBCONTROL=y
-BR2_PACKAGE_SAMBA_SMBCQUOTAS=y
-BR2_PACKAGE_SAMBA_SMBGET=y
-BR2_PACKAGE_SAMBA_SMBLDBTOOLS=y
-BR2_PACKAGE_SAMBA_SMBPASSWD=y
-BR2_PACKAGE_SAMBA_SMBSHARESEC=y
-BR2_PACKAGE_SAMBA_SMBSPOOL=y
-BR2_PACKAGE_SAMBA_SMBSTATUS=y
-BR2_PACKAGE_SAMBA_SMBTREE=y
-BR2_PACKAGE_SAMBA_SWAT=y
-BR2_PACKAGE_SAMBA_SMBTAR=y
-BR2_PACKAGE_SAMBA_TDB=y
-BR2_PACKAGE_SAMBA_TESTPARM=y
-# BR2_PACKAGE_SAMBA_WINBINDD is not set
-
-#
-# Samba libraries selection
-#
-BR2_PACKAGE_SAMBA_LIBSMBCLIENT=y
-
-#
-# Samba support selection
-#
-
-#
-# support avahi - disabled (requires avahi-daemon/dbus)
-#
-
-#
-# support gamin - disabled (requires gamin)
-#
+# BR2_PACKAGE_SAMBA is not set
 # BR2_PACKAGE_SER2NET is not set
 # BR2_PACKAGE_SOCAT is not set
 # BR2_PACKAGE_SPAWN_FCGI is not set
@@ -845,7 +848,7 @@ BR2_PACKAGE_SAMBA_LIBSMBCLIENT=y
 # Text editors and viewers
 #
 # BR2_PACKAGE_ED is not set
-# BR2_PACKAGE_NANO is not set
+BR2_PACKAGE_NANO=y
 # BR2_PACKAGE_UEMACS is not set
 
 #
