--- a/configs/amlogic_atv300-xbmc-qt-webkit_defconfig
+++ b/configs/amlogic_atv300-xbmc-qt-webkit_defconfig
@@ -71,7 +71,7 @@ BR2_HOST_DIR="$(BASE_DIR)/host"
 BR2_PRIMARY_SITE=""
 BR2_BACKUP_SITE="http://sources.buildroot.net/"
 BR2_SOURCEFORGE_MIRROR="kent"
-BR2_KERNEL_MIRROR="http://www.kernel.org/pub/"
+BR2_KERNEL_MIRROR="git@github.com:Pivosgroup/buildroot-linux-kernel.git"
 BR2_GNU_MIRROR="http://ftp.gnu.org/pub/gnu"
 BR2_DEBIAN_MIRROR="http://ftp.debian.org"
 BR2_JLEVEL=2
@@ -890,7 +890,7 @@ BR2_LINUX_KERNEL=y
 # BR2_LINUX_KERNEL_2_6_37 is not set
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 # BR2_LINUX_KERNEL_CUSTOM_TARBALL is not set
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="2.6.34"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="2a327dc620432e33af5c23d1cda88a4406de49c5"
 BR2_LINUX_KERNEL_VERSION="2.6.34"
 BR2_LINUX_KERNEL_PATCH="board/amlogic/atv300/kernel-patches"
 # BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
