[aml] use the correct config for amlogic builds

--- a/configs/amlogic_atv300-xbmc_defconfig
+++ b/configs/amlogic_atv300-xbmc_defconfig
@@ -42,6 +42,4 @@ BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/atv300/skeleton"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="2a327dc620432e33af5c23d1cda88a4406de49c5"
-BR2_LINUX_KERNEL_PATCH="board/amlogic/atv300/kernel-patches"
-BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/amlogic/atv300/kernel.config"
+BR2_LINUX_KERNEL_DEFCONFIG="meson_atv300"
