[aml] add dropbear and nano

--- a/configs/amlogic_atv300-xbmc_defconfig
+++ b/configs/amlogic_atv300-xbmc_defconfig
@@ -11,7 +11,6 @@ BR2_TARGET_GENERIC_GETTY=y
 BR2_BUSYBOX_VERSION_1_16_X=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/atv300/busybox.config"
 BR2_PACKAGE_UBOOTAML=y
-BR2_PACKAGE_XBMC=y
 # BR2_PACKAGE_SAMBA30_CIFS is not set
 # BR2_PACKAGE_SAMBA30_EVENTLOGADM is not set
 # BR2_PACKAGE_SAMBA30_NET is not set
@@ -37,6 +36,9 @@ BR2_PACKAGE_XBMC=y
 # BR2_PACKAGE_SAMBA30_TESTPARM is not set
 # BR2_PACKAGE_SAMBA30_WINBINDD is not set
 BR2_PACKAGE_SAMBA30_LIBSMBCLIENT=y
+BR2_PACKAGE_XBMC=y
+BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_NANO=y
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/atv300/skeleton"
 BR2_LINUX_KERNEL=y
