--- a/configs/amlogic_atv300-xbmc-qt-webkit_defconfig
+++ b/configs/amlogic_atv300-xbmc-qt-webkit_defconfig
@@ -8,10 +8,20 @@ BR2_EXT_TOOL_DIRS_EXTRA="/usr/lib/gconv"
 # BR2_SOFT_FLOAT is not set
 BR2_TARGET_OPTIMIZATION="-pipe -mfloat-abi=softfp -mfpu=neon"
 BR2_TARGET_GENERIC_GETTY=y
-BR2_BUSYBOX_VERSION_1_16_X=y
+BR2_BUSYBOX_VERSION_1_17_X=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/atv300/busybox.config"
 BR2_PACKAGE_UBOOTAML=y
+BR2_PACKAGE_SAMBA30_LIBSMBCLIENT
 BR2_PACKAGE_XBMC=y
+BR2_PACKAGE_DBUS_PYTHON=y
+BR2_PACKAGE_NTFS_3G=y
+BR2_PACKAGE_NTFSPROGS=y
+BR2_PACKAGE_LIBDAEMON=y
+BR2_PACKAGE_CONNMAN=y
+BR2_PACKAGE_CONNMAN_WIFI=y
+BR2_PACKAGE_CONNMAN_LOOPBACK=y
+BR2_PACKAGE_CONNMAN_NTPD=y
+BR2_PACKAGE_CONNMAN_CLIENT=y
 BR2_PACKAGE_QT=y
 BR2_PACKAGE_QT_DEMOS=y
 BR2_PACKAGE_QT_LICENSE_APPROVED=y
@@ -27,10 +37,18 @@ BR2_PACKAGE_QT_DBUS=y
 BR2_PACKAGE_QT_SVG=y
 BR2_PACKAGE_QT_WEBKIT=y
 BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_IPROUTE2=y
+BR2_PACKAGE_WIRELESS_TOOLS=y
+BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
+BR2_PACKAGE_WPA_SUPPLICANT_EAP=y
+BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
+BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
+BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT=y
+BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
 BR2_PACKAGE_NANO=y
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/atv300/skeleton"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="222e45a6392331b65d8ba86bdbea78e607d2ad36"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="503431e553a3b11c840c89590d057dd5bdf97304"
 BR2_LINUX_KERNEL_DEFCONFIG="meson_atv300"
