--- a/configs/amlogic_atv300_defconfig
+++ b/configs/amlogic_atv300_defconfig
@@ -1,18 +1,21 @@
 BR2_arm=y
 BR2_cortex_a9=y
 BR2_KERNEL_MIRROR="git@github.com:Pivosgroup/buildroot-linux-kernel.git"
+BR2_OPTIMIZE_3=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CODESOURCERY_ARM2010Q1=y
 BR2_EXT_TOOL_DIRS_EXTRA="/usr/lib/gconv"
 # BR2_SOFT_FLOAT is not set
 BR2_TARGET_OPTIMIZATION="-pipe -mfloat-abi=softfp -mfpu=neon"
 BR2_TARGET_GENERIC_GETTY=y
-BR2_BUSYBOX_VERSION_1_16_X=y
+BR2_BUSYBOX_VERSION_1_17_X=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/atv300/busybox.config"
 BR2_PACKAGE_UBOOTAML=y
+BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_NANO=y
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/atv300/skeleton"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="222e45a6392331b65d8ba86bdbea78e607d2ad36"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="503431e553a3b11c840c89590d057dd5bdf97304"
 BR2_LINUX_KERNEL_DEFCONFIG="meson_atv300"
