[aml] update amffmpeg to aml git a94da02b45663516e709d212a59331b6cd9178c1

--- a/package/amlogic/libplayer/src/amffmpeg/libavformat/Makefile
+++ b/package/amlogic/libplayer/src/amffmpeg/libavformat/Makefile
@@ -15,6 +15,7 @@ OBJS = allformats.o         \
        sdp.o                \
        seek.o               \
        utils.o              \
+       nsc.o
 
 # muxers/demuxers
 OBJS-$(CONFIG_A64_MUXER)                 += a64.o
