[aml] changed, include dos and e2fs userland tools

--- a/configs/amlogic_atv300-xbmc-qt-webkit_defconfig
+++ b/configs/amlogic_atv300-xbmc-qt-webkit_defconfig
@@ -14,6 +14,12 @@ BR2_PACKAGE_UBOOTAML=y
 BR2_PACKAGE_SAMBA30_LIBSMBCLIENT=y
 BR2_PACKAGE_XBMC=y
 BR2_PACKAGE_DBUS_PYTHON=y
+BR2_PACKAGE_DOSFSTOOLS=y
+BR2_PACKAGE_DOSFSTOOLS_MKDOSFS=y
+BR2_PACKAGE_DOSFSTOOLS_DOSFSCK=y
+BR2_PACKAGE_DOSFSTOOLS_DOSFSLABEL=y
+BR2_PACKAGE_E2FSPROGS=y
+BR2_PACKAGE_E2FSPROGS_UTILS=y
 BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_NTFSPROGS=y
 BR2_PACKAGE_LIBDAEMON=y
