[aml] changed, build ir remote keytest binary, include rc5, rcmm example conf files

--- a/package/amlogic/amremote_config/src/Makefile
+++ b/package/amlogic/amremote_config/src/Makefile
@@ -12,9 +12,12 @@ export TOP
 
 
 
-all:$(TARGET) 
+all:$(TARGET) keytest
 	@echo amremote_config build completed
 	
+keytest:irkey.o
+	$(CC)	$(CFLAGS) $(LDFLAGS) $(OBJS:%.o=%.c)  -o keytest
+
 $(TARGET):$(OBJS) 
 	$(CC)	$(CFLAGS) $(LDFLAGS) $(OBJS:%.o=%.c)  -o $(TARGET)
 
