--- a/package/amlogic/amremote_config/src/rc5.conf
+++ b/package/amlogic/amremote_config/src/rc5.conf
@@ -25,58 +25,17 @@
 #	reg_leader_idle	  set value for PREG_IR_DEC_LEADER_IDLE
 #	reg_repeat_leader set value for PREG_IR_DEC_REPEAT_IDLE
 #	reg_bit0_time	  set value for PREG_IR_DEC_BIT0_TIME
-#*************************************************************************************************************
-
-# small NEC remote
-#factory_code	=0xff000001
-#work_mode	=1
-#repeat_enable	=0
-#release_delay   =150
-#debug_enable	=0
-#reg_control	=0xfbe40
-
-# skyworth remote
-#factory_code	 =0x0e0e0001
-#work_mode	 =0   		#software mode
-#repeat_enable	 =0		#repeat disable
-#release_delay    =100
-#debug_enable	 =0
-#tw_leader_act	 =0x02bc012c
-#tw_bit0		 =0x00460028
-#tw_bit1		 =0x00ff0064
-#tw_repeat_leader =0x02bc012c
-
-# amlogic NEC remote
-factory_code	=0x40400001
-work_mode       =1
-repeat_enable   =0
-release_delay   =150
-debug_enable    =0
-reg_control	=0xfbe40
+#************************************************************************************************************* 
+#CVT RC5 remote
+work_mode  		= 0x32
+repeat_enable = 0
+release_delay	=	180
+debug_enable 	= 0
+tw_bit0		 =0x0398035a
+reg_control      =0x8574
+reg_base_gen     =0
+bit_count        =6
 
 key_begin
-		0x00 11
-		0x01 2
-		0x02 3
-		0x03 4
-		0x04 5
-		0x05 6
-		0x06 7
-		0x07 8
-		0x08 9
-		0x09 10
-		0x0D 28
-		0x1D 158
-		0x45 14
-		0x0B 103
-		0x0E 108
-		0x10 105
-		0x11 106
-		0x5B 48
-		0x57 46
-		0x54 32
-		0x19 139
-		0x1F 115
-		0x1E 114
-		0x16 102
+		0x36 57
 key_end
