--- a/package/amlogic/amremote_config/src/rcmm.conf
+++ b/package/amlogic/amremote_config/src/rcmm.conf
@@ -25,58 +25,74 @@
 #	reg_leader_idle	  set value for PREG_IR_DEC_LEADER_IDLE
 #	reg_repeat_leader set value for PREG_IR_DEC_REPEAT_IDLE
 #	reg_bit0_time	  set value for PREG_IR_DEC_BIT0_TIME
-#*************************************************************************************************************
-
-# small NEC remote
-#factory_code	=0xff000001
-#work_mode	=1
-#repeat_enable	=0
-#release_delay   =150
-#debug_enable	=0
-#reg_control	=0xfbe40
-
-# skyworth remote
-#factory_code	 =0x0e0e0001
-#work_mode	 =0   		#software mode
-#repeat_enable	 =0		#repeat disable
-#release_delay    =100
-#debug_enable	 =0
-#tw_leader_act	 =0x02bc012c
-#tw_bit0		 =0x00460028
-#tw_bit1		 =0x00ff0064
-#tw_repeat_leader =0x02bc012c
-
-# amlogic NEC remote
-factory_code	=0x40400001
-work_mode       =1
-repeat_enable   =0
-release_delay   =150
-debug_enable    =0
-reg_control	=0xfbe40
+#************************************************************************************************************* 
+#CVT RCMM remote
+factory_code	= 0x04d80001 
+work_mode  		= 4
+repeat_enable = 0
+release_delay	=	180
+debug_enable 	= 0
+tw_leader_act	 =0x00250021
+tw_bit0		 =0x001A0014
+tw_bit1		 =0x0022001C
+tw_bit2		 =0x00280024
+tw_bit3		 =0x0064002D
+tw_repeat_leader =0x0fff0fff
 
 key_begin
+		0x15 102
 		0x00 11
-		0x01 2
-		0x02 3
-		0x03 4
-		0x04 5
-		0x05 6
-		0x06 7
-		0x07 8
-		0x08 9
-		0x09 10
-		0x0D 28
-		0x1D 158
-		0x45 14
-		0x0B 103
-		0x0E 108
-		0x10 105
-		0x11 106
-		0x5B 48
-		0x57 46
-		0x54 32
-		0x19 139
-		0x1F 115
-		0x1E 114
-		0x16 102
+		0x40 2
+		0x80 3
+		0xC0 4
+		0x10 5
+		0x50 6
+		0x90 7
+		0xD0 8
+		0x20 9
+		0x60 10
+		0x1B 15
+		0xA7 125
+		0x04 104
+		0x44 109
+		0x25 103
+		0xA5 105
+		0x35 97
+		0xE5 106
+		0x65 108
+		0xC8 16
+		0x18 17
+		0x58 18
+		0x98 19
+		0xD8 20
+		0x28 21
+		0x68 22
+		0xA8 23
+		0xE8 24
+		0x38 25
+		0x4C 30
+		0x8C 31
+		0xCC 32
+		0x1C 33
+		0x5C 34
+		0x9C 35
+		0xDC 36
+		0x2C 37
+		0x6C 38
+		0xBC 44
+		0xFC 45
+		0x01 46
+		0x41 47
+		0x81 48
+		0xC1 49
+		0x11 50
+		0x48 14
+		0x3C 28
+		0x91 52
+		0x7C 51
+		0xF5 103
+		0x92 105
+		0x89 108
+		0xC9 106
+		0x71 57
 key_end
