--- a/configs/amlogic_atv300-xbmc_defconfig
+++ b/configs/amlogic_atv300-xbmc_defconfig
@@ -11,19 +11,23 @@ BR2_TARGET_GENERIC_GETTY=y
 BR2_BUSYBOX_VERSION_1_17_X=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/atv300/busybox.config"
 BR2_PACKAGE_UBOOTAML=y
-BR2_PACKAGE_SAMBA30_LIBSMBCLIENT=y
 BR2_PACKAGE_XBMC=y
-BR2_PACKAGE_DBUS_PYTHON=y
 BR2_PACKAGE_DOSFSTOOLS=y
 BR2_PACKAGE_DOSFSTOOLS_MKDOSFS=y
 BR2_PACKAGE_DOSFSTOOLS_DOSFSCK=y
 BR2_PACKAGE_DOSFSTOOLS_DOSFSLABEL=y
 BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_E2FSPROGS_UTILS=y
+BR2_PACKAGE_MTD=y
+BR2_PACKAGE_MTD_FLASH_OTP_DUMP=y
+BR2_PACKAGE_MTD_FLASH_OTP_INFO=y
 BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_NTFSPROGS=y
 BR2_PACKAGE_LIBDAEMON=y
 BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_NTP=y
+BR2_PACKAGE_NTP_NTPDATE=y
+BR2_PACKAGE_BASH=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
