[aml] xbmc, kernel bump. note the kernel defconfig rename

--- a/configs/amlogic_atv300-xbmc-qt-webkit_defconfig
+++ b/configs/amlogic_atv300-xbmc-qt-webkit_defconfig
@@ -11,8 +11,8 @@ BR2_TARGET_GENERIC_GETTY=y
 BR2_BUSYBOX_VERSION_1_17_X=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/atv300/busybox.config"
 BR2_PACKAGE_UBOOTAML=y
-BR2_PACKAGE_SAMBA30_LIBSMBCLIENT=y
 BR2_PACKAGE_XBMC=y
+BR2_PACKAGE_XIOS=y
 BR2_PACKAGE_DBUS_PYTHON=y
 BR2_PACKAGE_DOSFSTOOLS=y
 BR2_PACKAGE_DOSFSTOOLS_MKDOSFS=y
@@ -20,6 +20,9 @@ BR2_PACKAGE_DOSFSTOOLS_DOSFSCK=y
 BR2_PACKAGE_DOSFSTOOLS_DOSFSLABEL=y
 BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_E2FSPROGS_UTILS=y
+BR2_PACKAGE_MTD=y
+BR2_PACKAGE_MTD_FLASH_OTP_DUMP=y
+BR2_PACKAGE_MTD_FLASH_OTP_INFO=y
 BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_NTFSPROGS=y
 BR2_PACKAGE_LIBDAEMON=y
@@ -38,6 +41,8 @@ BR2_PACKAGE_QT_DBUS=y
 BR2_PACKAGE_QT_SVG=y
 BR2_PACKAGE_QT_WEBKIT=y
 BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_NTP=y
+BR2_PACKAGE_NTP_NTPDATE=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
@@ -50,5 +55,5 @@ BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/atv300/skeleton"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="7816c2005dcdd29c6c8f79a32e234f884e900fe1"
-BR2_LINUX_KERNEL_DEFCONFIG="meson_atv300"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="aa97e514d1dc56488b918840eca45f33440edafa"
+BR2_LINUX_KERNEL_DEFCONFIG="meson_xios"
