--- a/configs/amlogic_atv300-xbmc_defconfig
+++ b/configs/amlogic_atv300-xbmc_defconfig
@@ -12,6 +12,7 @@ BR2_BUSYBOX_VERSION_1_17_X=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/atv300/busybox.config"
 BR2_PACKAGE_UBOOTAML=y
 BR2_PACKAGE_XBMC=y
+BR2_PACKAGE_XIOS=y
 BR2_PACKAGE_DOSFSTOOLS=y
 BR2_PACKAGE_DOSFSTOOLS_MKDOSFS=y
 BR2_PACKAGE_DOSFSTOOLS_DOSFSCK=y
@@ -27,7 +28,6 @@ BR2_PACKAGE_LIBDAEMON=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_NTP=y
 BR2_PACKAGE_NTP_NTPDATE=y
-BR2_PACKAGE_BASH=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
@@ -40,5 +40,5 @@ BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/atv300/skeleton"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="7816c2005dcdd29c6c8f79a32e234f884e900fe1"
-BR2_LINUX_KERNEL_DEFCONFIG="meson_atv300"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="aa97e514d1dc56488b918840eca45f33440edafa"
+BR2_LINUX_KERNEL_DEFCONFIG="meson_xios"
