--- a/configs/amlogic_atv300_defconfig
+++ b/configs/amlogic_atv300_defconfig
@@ -17,5 +17,5 @@ BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/atv300/skeleton"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="7816c2005dcdd29c6c8f79a32e234f884e900fe1"
-BR2_LINUX_KERNEL_DEFCONFIG="meson_atv300"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="aa97e514d1dc56488b918840eca45f33440edafa"
+BR2_LINUX_KERNEL_DEFCONFIG="meson_xios"
