[aml] changed. move from mdev to udev. S10move_network_interfaces and S10setup_userdata will be integrated back later

--- a/board/amlogic/atv300/busybox.config
+++ b/board/amlogic/atv300/busybox.config
@@ -518,12 +518,12 @@ CONFIG_IPCS=y
 CONFIG_LOSETUP=y
 CONFIG_LSPCI=y
 CONFIG_LSUSB=y
-CONFIG_MDEV=y
-CONFIG_FEATURE_MDEV_CONF=y
-CONFIG_FEATURE_MDEV_RENAME=y
-CONFIG_FEATURE_MDEV_RENAME_REGEXP=y
-CONFIG_FEATURE_MDEV_EXEC=y
-CONFIG_FEATURE_MDEV_LOAD_FIRMWARE=y
+# CONFIG_MDEV is not set
+# CONFIG_FEATURE_MDEV_CONF is not set
+# CONFIG_FEATURE_MDEV_RENAME is not set
+# CONFIG_FEATURE_MDEV_RENAME_REGEXP is not set
+# CONFIG_FEATURE_MDEV_EXEC is not set
+# CONFIG_FEATURE_MDEV_LOAD_FIRMWARE is not set
 CONFIG_MKSWAP=y
 CONFIG_FEATURE_MKSWAP_UUID=y
 CONFIG_MORE=y
@@ -633,7 +633,7 @@ CONFIG_FEATURE_HDPARM_HDIO_UNREGISTER_HWIF=y
 CONFIG_FEATURE_HDPARM_HDIO_DRIVE_RESET=y
 CONFIG_FEATURE_HDPARM_HDIO_TRISTATE_HWIF=y
 CONFIG_FEATURE_HDPARM_HDIO_GETSET_DMA=y
-CONFIG_MAKEDEVS=y
+# CONFIG_MAKEDEVS is not set
 # CONFIG_FEATURE_MAKEDEVS_LEAF is not set
 CONFIG_FEATURE_MAKEDEVS_TABLE=y
 CONFIG_MAN=y
