--- a/configs/amlogic_xios-xbmc-qt-webkit_defconfig
+++ b/configs/amlogic_xios-xbmc-qt-webkit_defconfig
@@ -25,6 +25,7 @@ BR2_PACKAGE_MTD_FLASH_OTP_DUMP=y
 BR2_PACKAGE_MTD_FLASH_OTP_INFO=y
 BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_NTFSPROGS=y
+# BR2_PACKAGE_UDEV_MTD_PROBE is not set
 BR2_PACKAGE_LIBDAEMON=y
 BR2_PACKAGE_QT=y
 BR2_PACKAGE_QT_DEMOS=y
@@ -41,9 +42,9 @@ BR2_PACKAGE_QT_DBUS=y
 BR2_PACKAGE_QT_SVG=y
 BR2_PACKAGE_QT_WEBKIT=y
 BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_NTP=y
 BR2_PACKAGE_NTP_NTPDATE=y
-BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
@@ -51,9 +52,10 @@ BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
 BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
 BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
 BR2_PACKAGE_NANO=y
+BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV=y
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/atv300/skeleton"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="14c925d5076de78bfe7079eee650b54a8f042b6b"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="e28063709395aeb7dd114a1cda42ba3412c13f48"
 BR2_LINUX_KERNEL_DEFCONFIG="meson_xios"
