--- a/configs/amlogic_xios_defconfig
+++ b/configs/amlogic_xios_defconfig
@@ -13,9 +13,10 @@ BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/atv300/busybox.config"
 BR2_PACKAGE_UBOOTAML=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_NANO=y
+BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV=y
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/atv300/skeleton"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="14c925d5076de78bfe7079eee650b54a8f042b6b"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="e28063709395aeb7dd114a1cda42ba3412c13f48"
 BR2_LINUX_KERNEL_DEFCONFIG="meson_xios"
