--- a/configs/amlogic_xios-xbmc_defconfig
+++ b/configs/amlogic_xios-xbmc_defconfig
@@ -4,6 +4,9 @@ BR2_KERNEL_MIRROR="git@github.com:Pivosgroup/buildroot-linux-kernel.git"
 BR2_OPTIMIZE_3=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CODESOURCERY_ARM2010Q1=y
+BR2_PACKAGE_GDB=y
+BR2_PACKAGE_GDB_SERVER=y
+BR2_GDB_VERSION_7_1=y
 BR2_EXT_TOOL_DIRS_EXTRA="/usr/lib/gconv"
 # BR2_SOFT_FLOAT is not set
 BR2_TARGET_OPTIMIZATION="-pipe -mfloat-abi=softfp -mfpu=neon"
@@ -24,11 +27,11 @@ BR2_PACKAGE_MTD_FLASH_OTP_DUMP=y
 BR2_PACKAGE_MTD_FLASH_OTP_INFO=y
 BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_NTFSPROGS=y
-BR2_PACKAGE_LIBDAEMON=y
+# BR2_PACKAGE_UDEV_MTD_PROBE is not set
 BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_NTP=y
 BR2_PACKAGE_NTP_NTPDATE=y
-BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
@@ -36,9 +39,10 @@ BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
 BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
 BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
 BR2_PACKAGE_NANO=y
+BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV=y
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/atv300/skeleton"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="14c925d5076de78bfe7079eee650b54a8f042b6b"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="e28063709395aeb7dd114a1cda42ba3412c13f48"
 BR2_LINUX_KERNEL_DEFCONFIG="meson_xios"
