[aml] Create a new output target for squashfs+tar

--- a/fs/Config.in
+++ b/fs/Config.in
@@ -74,6 +74,7 @@ source "fs/jffs2/Config.in"
 source "fs/ubifs/Config.in"
 source "fs/squashfs/Config.in"
 source "fs/tar/Config.in"
+source "fs/tar_aml/Config.in"
 source "fs/cpio/Config.in"
 source "fs/iso9660/Config.in"
 source "fs/initramfs/Config.in"
