[aml] set new output target to default

--- a/configs/amlogic_xios-xbmc_defconfig
+++ b/configs/amlogic_xios-xbmc_defconfig
@@ -43,6 +43,8 @@ BR2_PACKAGE_NANO=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV=y
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/atv300/skeleton"
+# BR2_TARGET_ROOTFS_TAR is not set
+BR2_TARGET_ROOTFS_TAR_AML=y
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="4636e2f03d4e246188841b57bcd8fe05a9a113b7"
