[aml] update config for mysql

--- a/configs/amlogic_xios-xbmc-qt-webkit_defconfig
+++ b/configs/amlogic_xios-xbmc-qt-webkit_defconfig
@@ -41,6 +41,7 @@ BR2_PACKAGE_QT_KEYBOARD_LINUXINPUT=y
 BR2_PACKAGE_QT_DBUS=y
 BR2_PACKAGE_QT_SVG=y
 BR2_PACKAGE_QT_WEBKIT=y
+BR2_PACKAGE_MYSQL_CLIENT_LIB_ONLY=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_NTP=y
