--- a/configs/amlogic_xios-xbmc_defconfig
+++ b/configs/amlogic_xios-xbmc_defconfig
@@ -28,6 +28,7 @@ BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_NTFSPROGS=y
 # BR2_PACKAGE_UDEV_MTD_PROBE is not set
 BR2_PACKAGE_USBMOUNT=y
+BR2_PACKAGE_MYSQL_CLIENT_LIB_ONLY=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_NTP=y
