--- a/configs/amlogic_xios_m3-xbmc_defconfig
+++ b/configs/amlogic_xios_m3-xbmc_defconfig
@@ -15,6 +15,7 @@ BR2_BUSYBOX_VERSION_1_17_X=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/xios/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_UBOOTAML=y
+BR2_PACKAGE_LIRC=y
 BR2_PACKAGE_XBMC=y
 BR2_PACKAGE_XIOS=y
 BR2_PACKAGE_DOSFSTOOLS=y
