--- a/configs/amlogic_f16ref-xbmc_defconfig
+++ b/configs/amlogic_f16ref-xbmc_defconfig
@@ -49,4 +49,4 @@ BR2_TARGET_ROOTFS_RECOVERY_AML=y
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="2fdd70b20a7df58a51b719be655a5023a3feb2d0"
-BR2_LINUX_KERNEL_DEFCONFIG="meson_reff16_defconfig"
+BR2_LINUX_KERNEL_DEFCONFIG="meson_reff16"
