Pull in f16ref kernel instead of the Pivos kernel

--- a/configs/amlogic_f16ref-xbmc_defconfig
+++ b/configs/amlogic_f16ref-xbmc_defconfig
@@ -1,6 +1,6 @@
 BR2_arm=y
 BR2_cortex_a9=y
-BR2_KERNEL_MIRROR="git@github.com:j1nx/buildroot-amlogic-kernel.git"
+BR2_KERNEL_MIRROR="git@github.com:j1nx/buildroot-amlogic-reff16-kernel.git"
 BR2_OPTIMIZE_3=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CODESOURCERY_ARM2010Q1=y
@@ -48,5 +48,5 @@ BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/xios/skeleton"
 BR2_TARGET_ROOTFS_RECOVERY_AML=y
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="2fdd70b20a7df58a51b719be655a5023a3feb2d0"
-BR2_LINUX_KERNEL_DEFCONFIG="meson_reff16_defconfig"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="9304ea5172bdfa545fa89f0688ed123983b3f2b2"
+BR2_LINUX_KERNEL_DEFCONFIG="meson_reff16"
