--- a/configs/amlogic_xios_m3-xbmc_defconfig
+++ b/configs/amlogic_xios_m3-xbmc_defconfig
@@ -46,7 +46,7 @@ BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/xios/skeleton"
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_ROOTFS_RECOVERY_AML=y
-BR2_TARGET_ROOTFS_RECOVERY_AML_BOARDNAME="xiosm3"
+BR2_TARGET_ROOTFS_RECOVERY_AML_BOARDNAME="stvm3"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="fcd0941dd83ca9d7a34f53c1956434927da779bd"
