--- a/configs/amlogic_xios-xbmc_defconfig
+++ b/configs/amlogic_xios-xbmc_defconfig
@@ -47,7 +47,7 @@ BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/xios/skeleton"
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_ROOTFS_RECOVERY_AML=y
-BR2_TARGET_ROOTFS_RECOVERY_AML_BOARDNAME="stv_mbx_m3"
+BR2_TARGET_ROOTFS_RECOVERY_AML_BOARDNAME="stvm3"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="e85515218750f15040a50a42618410a6ca3c1105"
