update to f16ref

--- a/configs/amlogic_f16ref-xbmc_defconfig
+++ b/configs/amlogic_f16ref-xbmc_defconfig
@@ -1,6 +1,6 @@
 BR2_arm=y
 BR2_cortex_a9=y
-BR2_KERNEL_MIRROR="git@github.com:j1nx/Amlogic-reff16-kernel.git"
+BR2_KERNEL_MIRROR="git@github.com:j1nx/buildroot-linux-kernel-m3.git"
 BR2_OPTIMIZE_3=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CODESOURCERY_ARM2010Q1=y
@@ -45,7 +45,8 @@ BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/xios/skeleton"
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_ROOTFS_RECOVERY_AML=y
+BR2_TARGET_ROOTFS_RECOVERY_AML_BOARDNAME="f16ref"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="e9e2528a61af6c45993d3c014127d3a93b36fd30"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="c60351822a1af2979a4468f2cf7387238c2966d3"
 BR2_LINUX_KERNEL_DEFCONFIG="meson_reff16"
