--- a/configs/amlogic_xios-xbmc_defconfig
+++ b/configs/amlogic_xios-xbmc_defconfig
@@ -7,6 +7,8 @@ BR2_TOOLCHAIN_EXTERNAL_CODESOURCERY_ARM2010Q1=y
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_SERVER=y
 BR2_GDB_VERSION_7_1=y
+BR2_ENABLE_LOCALE_PURGE=y
+BR2_ENABLE_LOCALE_WHITELIST=""
 BR2_EXT_TOOL_DIRS_EXTRA="/usr/lib/gconv /usr/share/zoneinfo"
 # BR2_SOFT_FLOAT is not set
 BR2_TARGET_OPTIMIZATION="-pipe -mfloat-abi=softfp -mfpu=neon"
