--- a/package/Config.in
+++ b/package/Config.in
@@ -500,6 +500,7 @@ source "package/less/Config.in"
 endif
 source "package/nano/Config.in"
 source "package/uemacs/Config.in"
+source "package/thirdparty/joe/Config.in"
 if BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
 source "package/vim/Config.in"
 endif
