[aml] disable conflicting busybox blkid

--- a/board/amlogic/xios/busybox.config
+++ b/board/amlogic/xios/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.17.4
-# Wed Jan  2 21:42:02 2013
+# Sun Jan  6 22:17:08 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -507,7 +507,7 @@ CONFIG_DEFAULT_DEPMOD_FILE="modules.dep"
 CONFIG_REV=y
 CONFIG_ACPID=y
 CONFIG_FEATURE_ACPID_COMPAT=y
-CONFIG_BLKID=y
+# CONFIG_BLKID is not set
 CONFIG_DMESG=y
 CONFIG_FEATURE_DMESG_PRETTY=y
 CONFIG_FBSET=y
