--- a/configs/amlogic_f16ref-xbmc_defconfig
+++ b/configs/amlogic_f16ref-xbmc_defconfig
@@ -16,7 +16,7 @@ BR2_TARGET_GENERIC_GETTY=y
 BR2_BUSYBOX_VERSION_1_17_X=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/xios/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
-BR2_PACKAGE_UBOOTF16REF=y
+BR2_PACKAGE_UBOOTAML=y
 BR2_PACKAGE_LIRC=y
 BR2_PACKAGE_XBMC=y
 BR2_PACKAGE_DOSFSTOOLS=y
@@ -50,5 +50,5 @@ BR2_TARGET_ROOTFS_RECOVERY_AML=y
 BR2_TARGET_ROOTFS_RECOVERY_AML_BOARDNAME="f16ref"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5d3f84687f090fe94aa6913078448e7cd7440321"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="f6b7af000615a7c44e7bb7145ae201366696ce63"
 BR2_LINUX_KERNEL_DEFCONFIG="meson_reff16"
