--- a/configs/amlogic_stvmc-xbmc_defconfig
+++ b/configs/amlogic_stvmc-xbmc_defconfig
@@ -16,7 +16,7 @@ BR2_TARGET_GENERIC_GETTY=y
 BR2_BUSYBOX_VERSION_1_17_X=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/xios/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
-BR2_PACKAGE_UBOOTAML=y
+BR2_PACKAGE_UBOOTF16REF=y
 BR2_PACKAGE_LIRC=y
 BR2_PACKAGE_XBMC=y
 BR2_PACKAGE_DOSFSTOOLS=y
