--- a/configs/amlogic_xios-xbmc-qt-webkit_defconfig
+++ b/configs/amlogic_xios-xbmc-qt-webkit_defconfig
@@ -4,13 +4,21 @@ BR2_KERNEL_MIRROR="git://github.com/Pivosgroup/buildroot-linux-kernel.git"
 BR2_OPTIMIZE_3=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CODESOURCERY_ARM2010Q1=y
+BR2_PACKAGE_GDB=y
+BR2_PACKAGE_GDB_SERVER=y
+BR2_GDB_VERSION_7_1=y
+BR2_ENABLE_LOCALE_PURGE=y
+BR2_ENABLE_LOCALE_WHITELIST=""
 BR2_EXT_TOOL_DIRS_EXTRA="/usr/lib/gconv /usr/share/zoneinfo"
 # BR2_SOFT_FLOAT is not set
 BR2_TARGET_OPTIMIZATION="-pipe -mfloat-abi=softfp -mfpu=neon"
+BR2_BOARD_TYPE_AMLOGIC_M1=y
 BR2_TARGET_GENERIC_GETTY=y
 BR2_BUSYBOX_VERSION_1_17_X=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/amlogic/xios/busybox.config"
+BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_UBOOTAML=y
+BR2_PACKAGE_LIRC=y
 BR2_PACKAGE_XBMC=y
 BR2_PACKAGE_XIOS=y
 BR2_PACKAGE_DBUS_PYTHON=y
@@ -57,7 +65,7 @@ BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV=y
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/xios/skeleton"
 # BR2_TARGET_ROOTFS_TAR is not set
-BR2_TARGET_ROOTFS_TAR_AML=y
+BR2_TARGET_ROOTFS_RECOVERY_AML=y
 BR2_TARGET_ROOTFS_RECOVERY_AML_BOARDNAME="stvm3"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
