[f16ref] Switch to clean GBox config

--- a/configs/amlogic_f16ref-xbmc_defconfig
+++ b/configs/amlogic_f16ref-xbmc_defconfig
@@ -50,5 +50,5 @@ BR2_TARGET_ROOTFS_RECOVERY_AML=y
 BR2_TARGET_ROOTFS_RECOVERY_AML_BOARDNAME="f16ref"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5b86dff5b9178ad9763cd954b69c6edd6ed09f80"
-BR2_LINUX_KERNEL_DEFCONFIG="meson_reff16"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="149ee7f8365bb7888b4868eb426573a9f8260e91"
+BR2_LINUX_KERNEL_DEFCONFIG="meson_reff16_gbox"
