--- a/configs/amlogic_xios-xbmc_defconfig
+++ b/configs/amlogic_xios-xbmc_defconfig
@@ -29,9 +29,10 @@ BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_E2FSPROGS_UTILS=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_NTFS_3G=y
-BR2_PACKAGE_NTFSPROGS=y
+BR2_PACKAGE_NTFSPROGS=n
 # BR2_PACKAGE_UDEV_MTD_PROBE is not set
 BR2_PACKAGE_USBMOUNT=y
+BR2_PACKAGE_UTIL_LINUX_MOUNT=y
 BR2_PACKAGE_MYSQL_CLIENT_LIB_ONLY=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_IPROUTE2=y
