Revert "[aml] clean up defconfigs"
This reverts commit bc8dca5bf654c40a406d65ebdb521b3805d7d572.

--- a/configs/amlogic_xios-xbmc-qt-webkit_defconfig
+++ b/configs/amlogic_xios-xbmc-qt-webkit_defconfig
@@ -10,6 +10,7 @@ BR2_GDB_VERSION_7_1=y
 BR2_ENABLE_LOCALE_PURGE=y
 BR2_ENABLE_LOCALE_WHITELIST=""
 BR2_EXT_TOOL_DIRS_EXTRA="/usr/lib/gconv /usr/share/zoneinfo"
+# BR2_SOFT_FLOAT is not set
 BR2_TARGET_OPTIMIZATION="-pipe -mfloat-abi=softfp -mfpu=neon"
 BR2_BOARD_TYPE_AMLOGIC_M1=y
 BR2_TARGET_GENERIC_GETTY=y
@@ -32,6 +33,7 @@ BR2_PACKAGE_MTD_FLASH_OTP_DUMP=y
 BR2_PACKAGE_MTD_FLASH_OTP_INFO=y
 BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_NTFSPROGS=y
+# BR2_PACKAGE_UDEV_MTD_PROBE is not set
 BR2_PACKAGE_LIBDAEMON=y
 BR2_PACKAGE_QT=y
 BR2_PACKAGE_QT_DEMOS=y
@@ -62,6 +64,7 @@ BR2_PACKAGE_NANO=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV=y
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/xios/skeleton"
+# BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_ROOTFS_RECOVERY_AML=y
 BR2_TARGET_ROOTFS_RECOVERY_AML_BOARDNAME="stvm3"
 BR2_LINUX_KERNEL=y
