--- a/configs/amlogic_xios-xbmc_defconfig
+++ b/configs/amlogic_xios-xbmc_defconfig
@@ -10,6 +10,7 @@ BR2_GDB_VERSION_7_1=y
 BR2_ENABLE_LOCALE_PURGE=y
 BR2_ENABLE_LOCALE_WHITELIST=""
 BR2_EXT_TOOL_DIRS_EXTRA="/usr/lib/gconv /usr/share/zoneinfo"
+# BR2_SOFT_FLOAT is not set
 BR2_TARGET_OPTIMIZATION="-pipe -mfloat-abi=softfp -mfpu=neon"
 BR2_BOARD_TYPE_AMLOGIC_M1=y
 BR2_TARGET_GENERIC_GETTY=y
@@ -28,6 +29,8 @@ BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_E2FSPROGS_UTILS=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_NTFS_3G=y
+BR2_PACKAGE_NTFSPROGS=n
+# BR2_PACKAGE_UDEV_MTD_PROBE is not set
 BR2_PACKAGE_USBMOUNT=y
 BR2_PACKAGE_UTIL_LINUX_MOUNT=y
 BR2_PACKAGE_MYSQL_CLIENT_LIB_ONLY=y
@@ -45,6 +48,7 @@ BR2_PACKAGE_NANO=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_UDEV=y
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/amlogic/xios/skeleton"
+# BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_ROOTFS_RECOVERY_AML=y
 BR2_TARGET_ROOTFS_RECOVERY_AML_BOARDNAME="stvm3"
 BR2_LINUX_KERNEL=y
