[aml] enable proftpd (thx toys4me)

--- a/configs/amlogic_xios_m3-xbmc_defconfig
+++ b/configs/amlogic_xios_m3-xbmc_defconfig
@@ -35,6 +35,7 @@ BR2_PACKAGE_USBMOUNT=y
 BR2_PACKAGE_UTIL_LINUX_MOUNT=y
 BR2_PACKAGE_MYSQL_CLIENT_LIB_ONLY=y
 BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_PROFTPD=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_NTP=y
 BR2_PACKAGE_NTP_NTPDATE=y
@@ -53,5 +54,5 @@ BR2_TARGET_ROOTFS_RECOVERY_AML=y
 BR2_TARGET_ROOTFS_RECOVERY_AML_BOARDNAME="xiosm3"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="892562cc7c340c1d8e0b358c02beca52712b297f"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="dc501197b2d5f4cd167d8527462ef1ae472af352"
 BR2_LINUX_KERNEL_DEFCONFIG="meson_xios_m3"
